--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=ACANFD_FeatherM4CAN
-version=1.2.1
+version=1.2.2
 author=Pierre Molinaro
 maintainer=Pierre Molinaro <pierre@pcmolinaro.name>
-sentence=An Adafruit Feather M4 CAN Express CANFD driver.
+sentence=An Adafruit Feather M4 CAN board CANFD driver.
 paragraph=This library is a CANFD network driver for Adafruit Feather M4 CAN Express. Compatible with ACAN2515, ACAN2517, ACAN2517FD libraries. Default configuration sends and receives any frame – no default filter to provide. Standard reception filters (up to 128) and extended reception filters (up to 128) can be easily defined.
 category=Communication
 url=https://github.com/pierremolinaro/acanfd-feather-m4-can
